modified api to allow for payment intent with strapi

--- a/backend/api/orders/models/orders.settings.json
+++ b/backend/api/orders/models/orders.settings.json
@@ -23,9 +23,12 @@
     "order_identifier": {
       "type": "uid"
     },
-    "users": {
+    "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "address": {
+      "model": "address"
     }
   }
 }
