--- a/backend/api/orders/models/orders.settings.json
+++ b/backend/api/orders/models/orders.settings.json
@@ -11,9 +11,6 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "products": {
-      "collection": "products"
-    },
     "order_total": {
       "type": "decimal"
     },
@@ -29,6 +26,9 @@
     },
     "address": {
       "model": "address"
+    },
+    "cart_items": {
+      "collection": "cart-item"
     }
   }
 }
