--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+  
     "axios": "^0.20.0",
+
     "firebase": "^7.19.1",
     "firebase-tools": "^8.10.0",
     "moment": "^2.27.0",
@@ -46,8 +48,10 @@
     ]
   },
   "devDependencies": {
+    "axe-core": "^4.2.0",
     "@cypress/react": "^5.7.0",
     "@cypress/webpack-dev-server": "^1.3.0",
-    "cypress": "^7.3.0"
+    "cypress": "^7.3.0",
+    "cypress-axe": "^0.12.2"
   }
 }
