--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-flip-move": "^3.0.4",
+    "react-hook-form": "^7.6.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
